--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "trad3r/dump",
     "description": "Beautiful wrap for var_dump",
     "require": {
-        "php": "^5.3",        
+        "php": "^5.3"
     }
 }
