--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         },
         {
             "name": "Daniil Ryaguzov",
-            "email": ""
+            "email": "daniil@gmail.com"
         }
     ],
     "require": {
