--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,5 @@
     "autoload": {
         "files": [ "Dump.php" ]        
     },    
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
